--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body{
     background-position: center;
 }
 
+#it-takes-two{
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+    background-position: center;
+}
+
 .height-670{
     height: 670px
 }
