--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,13 @@
     width: 30px;
 }
 
+#sony{
+    font-family: 'roboto serif', sans-serif;
+}
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto' , snas-serif;
+    font-weight: 500;
 }
 
 #jumbo{
@@ -46,11 +50,18 @@ body{
     font-size: 2.75rem;
 }
 
+#plus{
+    background-color: rgb(190, 188, 187);
+}
 
 .my-text-blue{
     color: rgb(0, 114, 206);
 }
 
 .my-text-grey{
-    color: rgb(107, 107, 107);
+    color: rgb(131, 131, 131);
+}
+
+.my-img-width{
+    width: 65%;
 }
