--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ body{
     background-color: rgb(31, 31, 31);
 }
 
+#now{
+    background-color: rgb(22, 28, 59);
+}
 .height-670{
     height: 670px
 }
